Added hosting link to README and made title better, TODO is to make an icon.

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CUBOID FIGHT!</title>
+  <title>Cuboid Fight!</title>
   <script src="js/Button.js" defer></script>
   <script src="js/Platform.js" defer></script>
   <script src="js/Component.js" defer></script>
